src/test/ui/parser/keyword-loop-as-identifier.stderr
error: expected pattern, found keyword `loop`
  --> $DIR/keyword-loop-as-identifier.rs:4:9
   |
LL |     let loop = "foo";
   |         ^^^^ expected pattern

error: aborting due to previous error

