src/test/ui/parser/keyword-loop-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py loop'

fn main() {
    let loop = "foo"; //~ error: expected pattern, found keyword `loop`
}
